--- a/ConstructionSite/wwwroot/assets/css/animsition.css
+++ b/ConstructionSite/wwwroot/assets/css/animsition.css
@@ -7,9 +7,10 @@
  */
 .animsition,
 .animsition-overlay {
-    position: relative;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
+  position: relative;
+  opacity: 0;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
 }
 
 /**
