--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 
     <style>
         .header-style-5 #site-header {
-            background-color: transparent !important;
+            background-color: #1a1a1a !important;
             width: 100% !important;
             height: 87px !important;
         }
