--- a/ConstructionSite/Views/Shared/Components/Adress/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Adress/Default.cshtml
@@ -1,13 +1,13 @@
 ﻿@model ContactIndexViewModel
-<div class="col-md-8">
-    <div class="widget widget_about margin-bottom-25">
-        <p>Nullam vel enim risus. Integer rhoncus hendrerit sem egestas porttitor.</p>
-        <section class="widget widget_information">
-            <ul class="info-wrap">
-                <li class="address item">@Model.Address</li>
-                <li class="phone item">@Model.PhoneNumber</li>
-                <li class="email item">@Model.Email</li>
-            </ul>
-        </section>
+    <div class="col-md-8">
+        <img src="~/Assets/Img/pdc.svg" style="width: 15%; margin-top: -20px; margin-bottom: 5%; margin-left: 2%;" />
+        <div class="widget widget_about margin-bottom-25">
+            <section class="widget widget_information">
+                <ul class="info-wrap">
+                    <li class="address item">@Model.Address</li>
+                    <li class="phone item">@Model.PhoneNumber</li>
+                    <li class="email item">@Model.Email</li>
+                </ul>
+            </section>
+        </div>
     </div>
-</div>
