--- a/ConstructionSite/Views/Galery/Index.cshtml
+++ b/ConstructionSite/Views/Galery/Index.cshtml
@@ -1,14 +1,132 @@
-﻿@{
-    Layout = null;
-}
+﻿<!-- Main Content -->
+<div id="main-content" class="site-main clearfix main-main">
+    <div id="content-wrap">
+        <div id="site-content" class="site-content clearfix">
+            <div id="inner-content" class="inner-content-wrap">
+                <div class="page-content">
+                    <section class="wprt-section">
+                        <div class="container">
+                            <div class='row'>
+                                <div class="col-md-12">
+                                    <div class="wprt-spacer" data-desktop="70" data-mobi="40" data-smobi="40"></div>
+                                </div>
 
-<!DOCTYPE html>
+                                <div class="col-md-12">
+                                    <div class="wprt-spacer" data-desktop="50" data-mobi="40" data-smobi="40"></div>
+                                </div>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-</body>
-</html>
+                                <div class="col-md-12">
+                                    <h3>GALLERY WITH THUMBNAIL</h3>
+                                    <div class="wprt-lines style-1 custom-3">
+                                        <div class="line-1"></div>
+                                        <div class="line-2"></div>
+                                    </div>
+                                    <div class="wprt-spacer" data-desktop="30" data-mobi="30" data-smobi="30"></div>
+
+                                    <div class="wprt-galleries galleries" data-width="135" data-margin="10">
+                                        <div id="wprt-slider" class="flexslider">
+                                            <ul class="slides">
+                                                <li class="flex-active-slide">
+                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                </li>
+
+                                                <li class="flex-active-slide">
+                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                </li>
+
+                                                <li class="flex-active-slide">
+                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                </li>
+
+                                                <li class="flex-active-slide">
+                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                </li>
+                                            </ul>
+                                        </div>
+
+                                        <div id="wprt-carousel" class="flexslider">
+                                            <ul class="slides">
+                                                <li><img src="assets/img/gallery/2.jpg" alt="image"></li>
+                                                <li><img src="assets/img/gallery/2.jpg" alt="image"></li>
+                                                <li><img src="assets/img/gallery/2.jpg" alt="image"></li>
+                                                <li><img src="assets/img/gallery/2.jpg" alt="image"></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+
+                                    <div class="wprt-spacer" data-desktop="0" data-mobi="30" data-smobi="30"></div>
+                                </div><!-- /.col-md-6 -->
+
+
+
+                                <div class="col-md-12">
+                                    <div class="wprt-spacer" data-desktop="50" data-mobi="40" data-smobi="40"></div>
+
+                                    <h3>GALLERY MASONRY GRID</h3>
+                                    <div class="wprt-lines style-1 custom-3">
+                                        <div class="line-1"></div>
+                                        <div class="line-2"></div>
+                                    </div>
+                                    <div class="wprt-spacer" data-desktop="30" data-mobi="30" data-smobi="30"></div>
+
+                                    <div class="wprt-galleries-grid" data-layout="grid" data-column="3" data-column2="2" data-column3="2" data-column4="1" data-gaph="10" data-gapv="10">
+                                        <div id="images-wrap" class="cbp">
+                                            <div class="cbp-item">
+                                                <div class="item-wrap">
+                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                </div>
+                                            </div><!--/.cbp-item -->
+
+                                            <div class="cbp-item">
+                                                <div class="item-wrap">
+                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                </div>
+                                            </div><!--/.cbp-item -->
+
+                                            <div class="cbp-item">
+                                                <div class="item-wrap">
+                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                </div>
+                                            </div><!--/.cbp-item -->
+
+                                            <div class="cbp-item">
+                                                <div class="item-wrap">
+                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                </div>
+                                            </div><!--/.cbp-item -->
+
+                                            <div class="cbp-item">
+                                                <div class="item-wrap">
+                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                </div>
+                                            </div><!--/.cbp-item -->
+
+                                            <div class="cbp-item">
+                                                <div class="item-wrap">
+                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                </div>
+                                            </div><!--/.cbp-item -->
+                                        </div><!-- /#images-wrap -->
+                                    </div><!--/.wprt-galleries-grid -->
+
+                                    <div class="wprt-spacer" data-desktop="70" data-mobi="40" data-smobi="40"></div>
+                                </div>
+                            </div><!-- /.row -->
+                        </div><!-- /.container -->
+                    </section>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
