--- a/ConstructionSite/Views/Services/Index.cshtml
+++ b/ConstructionSite/Views/Services/Index.cshtml
@@ -37,9 +37,9 @@
                                         <div class="service-item clearfix">
                                             <div class="thumb"><img class="sekil" src="@item.image" width="370" height="300"></div>
                                             <div class="service-item-wrap">
-                                                <h3 class="title font-size-18"><a href="service-Construction.html">@item.Name</a></h3>
+                                                <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Details" asp-route-id="@item.Id">@item.Name</a></h3>
                                                 <p service-index="@item.Tittle"></p>
-                                                <a asp-controller="Services" asp-action="Services" asp-route-id="@item.Id" class="wprt-button small rounded-3px">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ReadMore)</a>
+                                                <a asp-controller="Services" asp-action="Details" asp-route-id="@item.Id" class="wprt-button small rounded-3px">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ReadMore)</a>
                                             </div>
                                         </div>
                                         <div class="wprt-spacer" data-desktop="60" data-mobi="30" data-smobi="30"></div>
