--- a/ConstructionSite/Views/Shared/Components/Project/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Project/Default.cshtml
@@ -2,30 +2,20 @@
 @inject SharedLocalizationService Localizer
 @foreach (var item in Model)
 {
-    <div id="projects" class="cbp cbp-caption-active cbp-caption- cbp-ready" style="height: 464px;">
-        <div class="cbp-wrapper-outer">
-            <div class="cbp-wrapper">
-                <div class="cbp-item architecture interior workspace" style="width: 337px; left: 0px; top: 0px;">
-                    <div class="cbp-item-wrapper">
-                        <div class="project-item">
-                            <div class="inner">
-                                <div class="grid">
-                                    <figure class="effect-zoe">
-                                        <img src="@item.Image" alt="image">
-                                        <figcaption>
-                                            <div>
-                                                <h2><a target="_blank" href="portfolio-main.html">@item.Name</a></h2>
-                                                <p>@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Construction)</p>
-                                            </div>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                                <a class="project-zoom cbp-lightbox" href="assets/img/projects/1-full.jpg" data-title="@item.Name">
-                                    <i class="fa fa-arrows-alt"></i>
-                                </a>
-                            </div>
-                        </div>
+    <div id="projects" class="cbp">
+        <div class="cbp-item architecture interior workspace">
+            <div class="project-item">
+                <div class="inner">
+                    <div class="grid">
+                        <figure class="effect-honey">
+                            <a asp-controller="Portfolio" asp-action="Detail" asp-route-id="@item.Id">
+                                <img src="@item.Image" alt="image">
+                            </a>
+                        </figure>
                     </div>
+                    <a class="project-zoom cbp-lightbox" href="assets/img/projects/1-full.jpg" data-title="@item.Name">
+                        <i class="fa fa-arrows-alt"></i>
+                    </a>
                 </div>
             </div>
         </div>
