--- a/ConstructionSite/Views/Home/Soon.cshtml
+++ b/ConstructionSite/Views/Home/Soon.cshtml
@@ -1,4 +1,4 @@
-﻿<title>Coming soon</title>
+﻿@*<title>Coming soon</title>
 @{ 
 
     Layout = null;
@@ -184,4 +184,4 @@ a, a:visited, a:active, a:link, a:hover {
 	document.getElementById("mins").innerHTML = minutes;
 	document.getElementById("secs").innerHTML = seconds;
 },1000);
-</script>
+</script>*@
