--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
@@ -63,7 +63,7 @@
                         </div>
                         <div class="form-group row">
                             <div class="col-lg-11">
-                                <input type="file" name="FileData" placeholder="Images" id="f-name" class="form-control" required>
+                                <input asp-for="FileData" placeholder="Images" id="f-name" class="form-control" required>
                             </div>
                         </div>
                         <div class="form-group row" style="margin-left: 72%;">
