--- a/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
@@ -25,7 +25,7 @@
                                 <div class="member">
                                     <div class="inner">
                                          <div class="image">
-                                            <div class="thumb"><a asp-controller="Services" asp-action="Details" asp-route-id="@item.Id"><img src="@item.image" alt="image"></a></div>
+                                            <div class="thumb"><a asp-controller="Services" asp-action="Details" asp-route-id="@item.Id"><img src="@item.image" ></a></div>
                                          </div>
                                          <div class="service-item-wrap">
                                             <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Details" asp-route-id="@item.Id">@item.Name</a></h3>
