--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Index.cshtml
@@ -1,7 +1,99 @@
-﻿
+﻿@model IEnumerable<GaleryViewModel>
 @{
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<style type="text/css">
+    .button-create {
+        margin-bottom: 10px;
+    }
 
+    .text-style {
+        text-align: center;
+        font-size: 1.2em;
+    }
+
+    .common {
+        background-color: RGB(241, 242, 247) !important;
+    }
+
+    .edit-delete {
+        text-align: center;
+    }
+
+    .about-button:hover {
+        background-color: black !important;
+        border-color: black;
+        color: #fff;
+    }
+
+    .img-style {
+        text-align: center;
+    }
+
+    .edit-icon {
+        color: #6E90EC;
+        padding-right: 7%;
+        font-size: 1.3em;
+    }
+
+    .delete-icon {
+        color: #F0636A;
+        font-size: 1.3em;
+    }
+</style>
+
+<section class="panel common">
+    <header class="panel-heading">
+        Portfolio Elements Table
+    </header>
+
+    <div class="panel-body">
+        <div class="button-create">
+            <a asp-area="ConstructionAdmin" asp-controller="Galery" asp-action="Add" class="btn about-button" style="color: #fff; background-color: #ffc925;">Create New Portfolio Element</a>
+        </div>
+        <div class="adv-table editable-table ">
+            <div class="space15"></div>
+            <div id="editable-sample_wrapper" class="dataTables_wrapper form-inline" role="grid">
+                <table class="table table-striped table-hover table-bordered dataTable" id="myTable editable-sample" aria-describedby="editable-sample_info">
+                    <thead>
+                        <tr role="row">
+                            <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Name</th>
+                            <th class="sorting edit-delete" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Edit: activate to sort column ascending" style="width: 87px;">#</th>
+                        </tr>
+                    </thead>
+
+                    <tbody role="alert" aria-live="polite" aria-relevant="all">
+                        @if (Model.Any())
+                        {
+                            @foreach (var item in Model)
+                            {
+                                <tr class="odd">
+                                    <td class="img-style">@item.Title</td>
+                                    <td class="edit-delete">
+                                        <a class="edit" asp-area="ConstructionAdmin" asp-controller="Galery" asp-action="Update" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o fa-2 edit-icon" aria-hidden="true"></i></a>
+                                        <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Galery" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-trash delete-icon" aria-hidden="true"></i></a>
+                                    </td>
+                                </tr>
+                            }
+                        }
+                        else
+                        {
+                            <tr class="odd">
+                                <td class="text-style text-danger" colspan="5" asp-validation-summary="All">Hec bir Data yoxdur</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</section>
+
+@section scripts{
+    <script>
+        $(document).ready(function () {
+            $('#myTable').DataTable();
+        })
+    </script>
+}
