--- a/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
@@ -24,7 +24,7 @@
                             <div class="cbp-item">
                                 <div class="member">
                                     <div class="inner">
-                                         <div class="image">
+                                         <div class="images">
                                             <div class="thumb"><a asp-controller="Services" asp-action="Details" asp-route-id="@item.Id"><img src="@item.image" ></a></div>
                                          </div>
                                          <div class="service-item-wrap">
