--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -273,6 +273,7 @@
                 <div class="page-content">
                     @await Component.InvokeAsync("About")
                     @await Component.InvokeAsync("Service")
+                    @*@(await Component.InvokeAsync<ServiceViewComponent>())*@
                     @await Component.InvokeAsync("Portfolio")
                     @await Component.InvokeAsync("Testimonial")
                 </div>
