--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -20,4 +20,8 @@
 @using ConstructionSite.Helpers.Paging
 @using ConstructionSite.Entity.Models
 @using ConstructionSite.Localization
-@using ConstructionSite.Helpers.Constants 
+@using ConstructionSite.Helpers.Constants
+
+#<!-- #region ViewComponent -->
+@using ConstructionSite.ViewComponents
+<!-- #endregion -->
