Galery uchun components yaratdim

--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -274,7 +274,7 @@
                     @await Component.InvokeAsync("About")
                     @await Component.InvokeAsync("Service")
                     @await Component.InvokeAsync("Portfolio")
-                    @await Component.InvokeAsync("Testimonial")
+                    @await Component.InvokeAsync("Galery")
                 </div>
                 <!-- /.col-md-12 -->
             </div>
