--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -16,7 +16,8 @@
 @using ConstructionSite.DTO.FrontViewModels.Blog
 @using ConstructionSite.Views.Shared.Components
 @using ConstructionSite.DTO.FrontViewModels.Project
-
+@using ConstructionSite.ViwModel.FrontViewModels.Galery
+@using ConstructionSite.ViwModel.AdminViewModels.Mail
 @using ConstructionSite.Helpers.Paging
 @using ConstructionSite.Entity.Models
 @using ConstructionSite.Localization
