--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
@@ -36,7 +36,7 @@
                 <div class="panel-body add-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" method="post" enctype="multipart/form-data">
                         <input type="hidden" name="Id" value="@Model.Id" />
-                        <input type="hidden" name="aboutID" value="@Model.aboutID" />
+                        <input type="hidden" name="aboutId" value="@Model.aboutId" />
                         <input type="hidden" name="imageId" value="@Model.imageId" />
                         <div class="form-group">
                             <div class="col-lg-11">
@@ -75,7 +75,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-11">
-                                <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
+                                <input type="file" asp-for="files" multiple="multiple" placeholder="Images" id="f-name" class="form-control">
                             </div>
                         </div>
                         <div class="form-group" style="margin-left: 72%;">
