--- a/ConstructionSite/Views/Galery/Index.cshtml
+++ b/ConstructionSite/Views/Galery/Index.cshtml
@@ -15,51 +15,7 @@
                                     <div class="wprt-spacer" data-desktop="50" data-mobi="40" data-smobi="40"></div>
                                 </div>
 
-                                <div class="col-md-12">
-                                    <h3>GALLERY WITH THUMBNAIL</h3>
-                                    <div class="wprt-lines style-1 custom-3">
-                                        <div class="line-1"></div>
-                                        <div class="line-2"></div>
-                                    </div>
-                                    <div class="wprt-spacer" data-desktop="30" data-mobi="30" data-smobi="30"></div>
-
-                                    <div class="wprt-galleries galleries" data-width="135" data-margin="10">
-                                        <div id="wprt-slider" class="flexslider">
-                                            <ul class="slides">
-                                                <li class="flex-active-slide">
-                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
-                                                </li>
-
-                                                <li class="flex-active-slide">
-                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
-                                                </li>
-
-                                                <li class="flex-active-slide">
-                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
-                                                </li>
-
-                                                <li class="flex-active-slide">
-                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
-                                                </li>
-                                            </ul>
-                                        </div>
-
-                                        <div id="wprt-carousel" class="flexslider">
-                                            <ul class="slides">
-                                                <li><img src="assets/img/gallery/2.jpg" alt="image"></li>
-                                                <li><img src="assets/img/gallery/2.jpg" alt="image"></li>
-                                                <li><img src="assets/img/gallery/2.jpg" alt="image"></li>
-                                                <li><img src="assets/img/gallery/2.jpg" alt="image"></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-
-                                    <div class="wprt-spacer" data-desktop="0" data-mobi="30" data-smobi="30"></div>
-                                </div><!-- /.col-md-6 -->
+                                @await Component.InvokeAsync("GaleryImages")
 
 
 
