--- a/ConstructionSite/Views/Galery/Index.cshtml
+++ b/ConstructionSite/Views/Galery/Index.cshtml
@@ -17,66 +17,8 @@
 
                                 @await Component.InvokeAsync("GaleryImages")
 
+                                @await Component.InvokeAsync("GaleryVideos")
 
-
-                                <div class="col-md-12">
-                                    <div class="wprt-spacer" data-desktop="50" data-mobi="40" data-smobi="40"></div>
-
-                                    <h3>GALLERY MASONRY GRID</h3>
-                                    <div class="wprt-lines style-1 custom-3">
-                                        <div class="line-1"></div>
-                                        <div class="line-2"></div>
-                                    </div>
-                                    <div class="wprt-spacer" data-desktop="30" data-mobi="30" data-smobi="30"></div>
-
-                                    <div class="wprt-galleries-grid" data-layout="grid" data-column="3" data-column2="2" data-column3="2" data-column4="1" data-gaph="10" data-gapv="10">
-                                        <div id="images-wrap" class="cbp">
-                                            <div class="cbp-item">
-                                                <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
-                                                </div>
-                                            </div><!--/.cbp-item -->
-
-                                            <div class="cbp-item">
-                                                <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
-                                                </div>
-                                            </div><!--/.cbp-item -->
-
-                                            <div class="cbp-item">
-                                                <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
-                                                </div>
-                                            </div><!--/.cbp-item -->
-
-                                            <div class="cbp-item">
-                                                <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
-                                                </div>
-                                            </div><!--/.cbp-item -->
-
-                                            <div class="cbp-item">
-                                                <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
-                                                </div>
-                                            </div><!--/.cbp-item -->
-
-                                            <div class="cbp-item">
-                                                <div class="item-wrap">
-                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
-                                                </div>
-                                            </div><!--/.cbp-item -->
-                                        </div><!-- /#images-wrap -->
-                                    </div><!--/.wprt-galleries-grid -->
-
-                                    <div class="wprt-spacer" data-desktop="70" data-mobi="40" data-smobi="40"></div>
-                                </div>
                             </div><!-- /.row -->
                         </div><!-- /.container -->
                     </section>
