--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
@@ -35,7 +35,7 @@
                 <hr />
                 <div class="panel-body add-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Update" method="post" enctype="multipart/form-data">
-                        <input type="hidden" name="ImageId" value="@Model.ImageId" />
+
                         <input type="hidden" name="id" value="@Model.id" />
                         <div class="form-group ">
                             <div class="col-lg-11">
@@ -67,6 +67,21 @@
                                 <textarea type="text" asp-for="TittleRu" rows="15" id="f-name" class="form-control" placeholder="Title RU"></textarea>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <div class="col-lg-11">
+                                <textarea type="text" asp-for="ContentAz" rows="15" id="f-name" class="form-control" placeholder="Title RU"></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-lg-11">
+                                <textarea type="text" asp-for="ContentEn" rows="15" id="f-name" class="form-control" placeholder="Title RU"></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-lg-11">
+                                <textarea type="text" asp-for="ContentRu" rows="15" id="f-name" class="form-control" placeholder="Title RU"></textarea>
+                            </div>
+                        </div>
                         <div class="form-group ">
                             <div class="col-lg-11">
                                 <img src="@Model.path" width="240" height="280" alt="Alternate Text" />
@@ -74,7 +89,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-11">
-                                <input type="file" name="file" placeholder="Images" id="f-name" class="form-control" />
+                                <input type="file" asp-for="file" placeholder="Images" id="f-name" class="form-control" />
                             </div>
                         </div>
 
