--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -18,3 +18,4 @@
 @using ConstructionSite.Entity.Identity
 @using ConstructionSite.DTO.AdminViewModels.Blog
 @using ConstructionSite.DTO.AdminViewModels.Contact
+@using ConstructionSite.Areas.Core 
