--- a/ConstructionSite/wwwroot/assets/css/flexslider.css
+++ b/ConstructionSite/wwwroot/assets/css/flexslider.css
@@ -80,7 +80,8 @@ html[xmlns] .flexslider .slides {
   zoom: 1;
 }
 .flexslider .slides img {
-  height: auto;
+  height: 400px;
+  object-fit:cover;
   -moz-user-select: none;
 }
 .flex-viewport {
@@ -263,3 +264,4 @@ html[xmlns] .flexslider .slides {
     right: 10px;
   }
 }
+
