--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
@@ -64,7 +64,10 @@
                             </div>
                         </div>
                         <div class="wrapper--preview">
-
+                            @if (Model.Images == null | Model.Images.Count<1)
+                            {
+                                <input  type="file" asp-for="files" multiple="multiple" />
+                            }
                             @foreach (var item in Model.Images)
                             {
                                 <div class="box">
@@ -76,8 +79,8 @@
 
                                         <label>
 
-                                            <input id="@item.Id"   type="file" asp-for="files"  onclick="uploadFiles(@item.Id);" />
-                                           
+                                            <input id="@item.Id" type="file" asp-for="files" onclick="uploadFiles(@item.Id);" />
+
 
 
                                         </label>
