--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
@@ -64,9 +64,9 @@
                             </div>
                         </div>
                         <div class="wrapper--preview">
-                            @if (Model.Images == null | Model.Images.Count<1)
+                            @if (Model.Images == null | Model.Images.Count < 1)
                             {
-                                <input  type="file" asp-for="files" multiple="multiple" />
+                                <input type="file" asp-for="files" multiple="multiple" />
                             }
                             @foreach (var item in Model.Images)
                             {
@@ -79,7 +79,7 @@
 
                                         <label>
 
-                                            <input id="@item.Id" type="file" asp-for="files" onclick="uploadFiles(@item.Id);" />
+                                            <input id="@item.Id" type="file" asp-for="files" onclick="cenerateInput(@item.Id);" />
 
 
 
@@ -108,31 +108,15 @@
 </div>
 <script>
 
-    function uploadFiles(number) {
+    function cenerateInput(number) {
         $(document).ready(function () {
             $('<input>').attr({
                 type: 'hidden',
-                value:number,
+                value: number,
                 name: 'ImageID'
             }).appendTo('form');
         });
     }
-
-    //function foo(event) {
-    //    let val = event.currentTarget.value;
-    //    let id = event.target.getAttribute('data-id');
-    //    let newFormData = new FormData()
-    //    newFormData.append('id', id);
-    //    newFormData.append('val', val);
-    //    console.log(newFormData);
-    //    fetch('/ConstructionAdmin/Image/blogUpdate/', {
-    //        method: 'POST',
-    //        body: newFormData,
-    //        headers: { "Content-Type": "multipart/form-data" }
-    //    });
-
-    //}
-
 
 
 </script>
