Stated_Calery_But_Yet_Finsihed

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
@@ -106,20 +106,20 @@
         </div>
     </div>
 </div>
-<script>
+@*<script>
 
-    function cenerateInput(number) {
-        $(document).ready(function () {
-            $('<input>').attr({
-                type: 'hidden',
-                value: number,
-                name: 'ImageID'
-            }).appendTo('form');
-        });
-    }
+        function cenerateInput(number) {
+            $(document).ready(function () {
+                $('<input>').attr({
+                    type: 'hidden',
+                    value: number,
+                    name: 'ImageID'
+                }).appendTo('form');
+            });
+        }
 
 
-</script>
+    </script>*@
 @section scripts{
 
 
