--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -128,5 +128,6 @@
             $('select.styled').customSelect();
         });
     </script>
+    <script src="~/Custom/js/fileCenreated.js" asp-append-version="true"></script>
 </body>
 </html>
