--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Index.cshtml
@@ -63,13 +63,14 @@
                         {
                             @foreach (var item in Model)
                             {
-                                <tr class="odd">
-                                    <td class="img-style">@item.Name</td>
-                                    <td class="edit-delete">
-                                        <a class="edit" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Update" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o fa-2 edit-icon" aria-hidden="true"></i></a>
-                                        <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-trash delete-icon" aria-hidden="true"></i></a>
-                                    </td>
-                                </tr>
+                        <tr class="odd">
+                            <td class="img-style">@item.Name</td>
+                            <td class="img-style img-style"><img src="@item.ImagePath" width="60" height="60" alt="Alternate Text" /></td>
+                            <td class="edit-delete">
+                                <a class="edit" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Update" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o fa-2 edit-icon" aria-hidden="true"></i></a>
+                                <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-trash delete-icon" aria-hidden="true"></i></a>
+                            </td>
+                        </tr>
                             }
                         }
                         else
