css and html changes

--- a/ConstructionSite/Views/Shared/Components/GaleryVideos/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/GaleryVideos/Default.cshtml
@@ -1,5 +1,13 @@
-﻿<div class="col-md-12">
-    <div class="wprt-spacer" data-desktop="50" data-mobi="40" data-smobi="40"></div>
+﻿
+<style>
+
+    .spaces{
+        margin-top: -250px;
+    }
+</style>
+
+<div class="col-md-12">
+    <div class="wprt-spacer spaces" data-desktop="50" data-mobi="40" data-smobi="40"></div>
 
     <h3>GALLERY MASONRY GRID</h3>
     <div class="wprt-lines style-1 custom-3">
