--- a/ConstructionSite/Views/Shared/_TopHeader.cshtml
+++ b/ConstructionSite/Views/Shared/_TopHeader.cshtml
@@ -1,9 +1,13 @@
 ﻿<!--Starts Black header-->
+
+<style>
+
+</style>
 <div class="top-header-b">
 
     <div class="phone-call">
         <i class="fa fa-phone"></i>
-        <span style="margin-left:5px">(+994)50-899-01-10</span>
+        <span class="spaned" style="margin-left:5px">(+994)50-899-01-10</span>
 
         <i class="fa fa-envelope" style="margin-left: 20px;"></i>
         <span style="margin-left:5px">office@pdc.az</span>
