--- a/ConstructionSite/wwwroot/assets/css/flexslider.css
+++ b/ConstructionSite/wwwroot/assets/css/flexslider.css
@@ -80,17 +80,22 @@ html[xmlns] .flexslider .slides {
   zoom: 1;
 }
 .flexslider .slides img {
-  height: 400px;
+  
   object-fit:cover;
   -moz-user-select: none;
 }
 .flex-viewport {
-  max-height: 2000px;
+  height: 450px;
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
   -ms-transition: all 1s ease;
   -o-transition: all 1s ease;
   transition: all 1s ease;
+}
+@media(max-width:990px) {
+    .flex-viewport {
+        height: auto;
+    }
 }
 .loading .flex-viewport {
   max-height: 300px;
