--- a/ConstructionSite/wwwroot/style.css
+++ b/ConstructionSite/wwwroot/style.css
@@ -1470,6 +1470,11 @@ body.page #main-content { padding-top: 0; padding-bottom: 0; }
 	display: flex; 
 	justify-content: center;
 }
+@media(max-width:990px) {
+    .spaned {
+        display: none;
+    }
+}
 
 .langu li a {
 	color: #fff;
@@ -1488,7 +1493,7 @@ body.page #main-content { padding-top: 0; padding-bottom: 0; }
 		margin-top:30px;
 	}
 	#content-wrap{
-		margin-top: 50px;
+		margin-top: 10px;
 	}
 }
 /* Media Queries
